# Sapphire

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  ModelExecuter.mdj  README.md  appveyor.yml  run_tests.py
CMake/: CheckAVX.cmake  CodeCoverage.cmake  CompileOptions.cmake  IncludeCuda.cmake
Impl/Motutapu/: Model.hpp
Impl/Motutapu/Interface/: Create.hpp
Impl/Motutapu/compute/: Compute.hpp
Impl/Motutapu/operations/: Model.hpp  Unit.hpp
Impl/Motutapu/tensor/: Tensor.hpp  TensorData.hpp  TensorDescriptor.hpp
Impl/Motutapu/util/: DenseMatrix.hpp  ResourceManager.hpp  Shape.hpp  SparseMatrix.hpp  TensorData.hpp
Includes/Motutapu/: Model.hpp  ModelDecl.hpp  Test.hpp
Includes/Motutapu/Interface/: CreateDecl.hpp  IndexingInterfaceDecl.hpp  MathInterfaceDecl.hpp
Includes/Motutapu/Tests/: BasicComputationTest.hpp  BroadcastTest.hpp  ComputationTest.hpp  CudaFunctionalityTest.cuh  SparseGemmTest.hpp  SparseMemoryTest.hpp  Test.hpp
Includes/Motutapu/compute/: Compute.hpp  ComputeDecl.hpp  Initialize.hpp  MatrixFormat.hpp  Sparse.hpp  SparseMatrix.hpp
Includes/Motutapu/operations/: ConvDecl.hpp  IndexingDecl.hpp  MathDecl.hpp  MemoryDecl.hpp  ModelDecl.hpp  Unit.hpp  UnitDecl.hpp
Includes/Motutapu/tensor/: CreationDecl.hpp  IndexingDecl.hpp  MathDecl.hpp  Shape.hpp  SparsifyDecl.hpp  Tensor.hpp  TensorData.hpp  TensorDataDecl.hpp  TensorDecl.hpp  TensorDescriptor.hpp  TensorDescriptorDecl.hpp
Includes/Motutapu/util/: ConcurrentQueue.hpp  DenseMatrix.hpp  DenseMatrixDecl.hpp  Device.hpp  MemoryManager.hpp  ResourceManager.hpp  ShapeDecl.hpp  (+7 more)
Includes/Sapphire/: Model.hpp  Sapphire.hpp
Scripts/: travis_build_codecov.sh
Sources/: Model.cpp
Sources/Motutapu/: CMakeLists.txt  Initialize.cpp  Model.cpp  SimpleTest.cpp  SimpleTest.cu  Test.cpp  Test.cu
Sources/Motutapu/Tests/: BasicComputationTest.cpp  BroadcastTest.cpp  ComputationTest.cpp  SimpleTest.cpp  SimpleTest.cu  SparseGemmTest.cpp  SparseMemoryTest.cpp  TestCudaGemm.cpp
Sources/Motutapu/compute/: Compute.cpp  Initialize.cpp  MatrixFormat.cpp  Sparse.cpp
Sources/Motutapu/compute/cuda/: Memory.cpp  Memory.cu
Sources/Motutapu/compute/cuda/dense/: Basic.cu  BasicKernel.cu  Convolution.cu  DenseMatrix.cu  Gemm.cu  GemmKernel.cu  Initialize.cu  InitializeKernel.cu  WmmaGemm.cu
Sources/Motutapu/compute/cuda/naive/: NaigeGemm.cpp  NaiveGemm.cpp
Sources/Motutapu/compute/cuda/sparse/: CalculateLoad.cu  MatrixManage.cu  Sparse.cpp  Sparse.cu  SparseGemm.cu  SparseMatrix.cu
Sources/Motutapu/compute/cudaUtil/: Memory.cpp
Sources/Motutapu/compute/dense/cuda/: Basic.cu  BasicKernel.cu  Convolution.cu  Gemm.cu  GemmKernel.cu  Initialize.cu  InitializeKernel.cu
Sources/Motutapu/compute/dense/naive/: NaiveBasic.cpp  NaiveGemm.cpp  NaiveInitialize.cpp
Sources/Motutapu/compute/naive/: NaiveBasic.cpp  NaiveGemm.cpp  NaiveInitialize.cpp
Sources/Motutapu/compute/sparse/cuda/: SparseGemm.cu
Sources/Motutapu/operations/Backward/: LinearBackward.cpp  MathBackward.cpp  MseBackward.cpp
Sources/Motutapu/operations/Forward/: Linear.cpp  MathForward.cpp  Softmax.cpp
Sources/Motutapu/operations/Loss/: MSE.cpp  MseBackProp.cpp
Sources/Motutapu/tensor/: Tensor.cpp  TensorData.cpp  TensorDescriptor.cpp
Sources/Motutapu/util/: Device.cpp  MemoryManager.cpp  ResourceManager.cpp  shape.cpp
Sources/Sapphire/: CMakeLists.txt  Initialize.cpp  Model.cpp
Sources/Sapphire/Tests/: BasicComputationTest.cpp  BroadcastTest.cpp  ComputationTest.cpp  Conv2DTest.cpp  ConvolutionTest.cpp  GemmTest.cpp  SimpleTest.cpp  SimpleTest.cu  SparseGemmTest.cpp  SparseMemoryTest.cpp  TestUtil.cpp
Sources/Sapphire/Tests/Basics/: ReshapeTest.cpp  TransposeTest.cpp
Sources/Sapphire/Tests/GraphTest/: GraphFunctionalityTest.cpp
Sources/Sapphire/Tests/OperationTest/: LinearTest.cpp
Sources/Sapphire/Tests/TensorTest/: TensorFunctionalityTest.cpp
Sources/Sapphire/compute/: ActivationOps.cpp  BasicOps.cpp  Compute.cpp  ComputeBackward.cpp  ConvolutionOps.cpp  IndexingOps.cpp  Initialize.cpp  LossOps.cpp  TrigonometricOps.cpp
Sources/Sapphire/compute/cudaUtil/: Memory.cpp  SparseUtil.cu
Sources/Sapphire/compute/dense/cuda/: Activation.cu  Basic.cu  BasicBackward.cu  BasicKernel.cu  Convolution.cu  CrossEntropy.cu  CudnnStruct.cu  Gemm.cu  GemmKernel.cu  Initialize.cu  InitializeKernel.cu  Pool.cu  Trigonometric.cu
Sources/Sapphire/compute/dense/cuda/kernels/: ActivationBackwardKernel.cu  ActivationKernel.cu  BasicBackwardKernel.cu  BasicKernel.cu  CrossEntropyKernel.cu  GemmKernel.cu  InitializeKernel.cu  TrigonometricBackwardKernel.cu  TrigonometricKernel.cu
Sources/Sapphire/compute/dense/naive/: Conv2D.cpp  Convolution.cpp  NaiveBasic.cpp  NaiveCrossEntropy.cpp  NaiveGemm.cpp  NaiveInitialize.cpp  Pool.cpp
Sources/Sapphire/compute/sparse/: Sparse.cpp
Sources/Sapphire/compute/sparse/cuda/: SparseGemm.cu  cuSparseGemm.cu
Sources/Sapphire/compute/sparse/naive/: SparseGemm.cpp
Sources/Sapphire/operations/: Unit.cpp
Sources/Sapphire/operations/Backward/: BasicBackward.cpp  Conv2DBackward.cpp  CrossEntropyBackward.cpp  ExampleBackward.cpp  LinearBackward.cpp  MathBackward.cpp  MaxPool2DBackward.cpp  MseBackward.cpp  ReLUBackward.cpp  SoftmaxBackward.cpp
Sources/Sapphire/operations/Backward/Indexing/: FlattenBackward.cpp
Sources/Sapphire/operations/Forward/: Basic.cpp  Conv2D.cpp  Linear.cpp  MathForward.cpp  MaxPool2D.cpp  ReLU.cpp  Softmax.cpp
Sources/Sapphire/operations/Forward/Functional/: MathForward.cpp  MaxPool2D.cpp  ReLU.cpp  Softmax.cpp
Sources/Sapphire/operations/Forward/Indexing/: Flatten.cpp
Sources/Sapphire/operations/Loss/: CrossEntropy.cpp  MSE.cpp
Sources/Sapphire/operations/optimizers/: SGD.cpp
Sources/Sapphire/tensor/: CreateTensor.cpp  Tensor.cpp  TensorData.cpp  TensorDescriptor.cpp
Sources/Sapphire/util/: CudaDevice.cpp  Device.cpp  DeviceInfo.cpp  FileManager.cpp  MemoryManager.cpp  ResourceManager.cpp  shape.cpp
Sources/Sapphire/util/DataLoader/: BinaryLoader.cpp  CsvLoader.cpp  DataLoader.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp  Tests.cpp
(+225 files in other folders)
